# opengl

./: .gitignore  CMakeLists.txt  README.md
configuration/: root_directory.h.in
includes/learnopengl/: animator.h  bone.h  camera.h  model.h
resources/objects/coin/: Coin.mtl
resources/objects/f1/: f1.mtl
resources/objects/lewis/: idle.dae  kick.dae  left-turn.dae  punch.dae  right-turn.dae  run.dae  walk.dae
resources/objects/maria/: crazy_dance.dae  maria.dae
resources/objects/mixamo/: idle.dae  kachujin.dae  kick.dae  punch.dae  run.dae  walk.dae
src/10_camera/: main.cpp
src/2_triangle/: main.cpp
src/4_tangram/: main.cpp
src/5_tangram/: main.cpp
src/6.1_shader_uniform/: main.cpp
src/6_shader/: main.cpp
src/7_texture_combined/: textures_combined.cpp
src/8_transformations/: transformations.cpp
src/9_assignment_1/: README.md
src/9_sort/: transform.fs
src/assignment/assignment_0/: README.md  main.cpp
src/assignment/assignment_1/: README.md  main.cpp  transform.vs
src/assignment/assignment_2/: README.md  lights.fs  main.cpp
src/assignment/assignment_3/: Car.cpp  Car.h  Coins.cpp  Coins.h  Ground.cpp  Ground.h  README.md  Utils.cpp  Utils.h  main.cpp  shader.fs
src/assignment/assignment_4/: README.md  anim_model.vs  main.cpp
src/playground/10_skeleton_animation/: main.cpp
src/playground/1_window/: main.cpp
src/playground/3_moving_object/: main.cpp
src/playground/4_fractal/: main.cpp
src/playground/5.1_shader_uniform/: shader.vs
src/playground/5.2_shader_sierpinski/: main.cpp  shader.vs
src/playground/5_shader/: main.cpp
src/playground/7_transformations/: transformations.cpp
src/playground/9_model_animation/: main.cpp
